kubernetes/applications/infra/gateway-api/app/gateway.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: "${CLUSTER_LB_EXT_GATEWAY_API}"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.${CLUSTER_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.${CLUSTER_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: public-wildcard-tls
            namespace: infra-certmanager

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/hostname: &hostnames "internal.${CLUSTER_DOMAIN}, *.internal.${CLUSTER_DOMAIN}"
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: "${CLUSTER_LB_INT_GATEWAY_API}"
  infrastructure: # passes annotation to service being created
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostnames
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.internal.${CLUSTER_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      hostname: "*.internal.${CLUSTER_DOMAIN}"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: internal-wildcard-tls
            namespace: infra-certmanager
