kubernetes/applications/infra/gateway-api/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: global-internal-http-redirect
  namespace: infra-gateway
spec:
  parentRefs:
    - name: internal
      namespace: infra-gateway
      sectionName: http
  hostnames:
    - "*.internal.${CLUSTER_DOMAIN}"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301 # Permanent Redirect
